# viewtrace.dev

./: Android.bp  BUILD
.github/workflows/: deploy-ui-to-pages.yml  sync-protos.yml
docs/contributing/: getting-started.md
docs/getting-started/: other-formats.md
src/trace_processor/: BUILD.gn  forwarding_trace_parser.cc  forwarding_trace_parser_unittest.cc  trace_processor_impl.cc  trace_reader_registry.cc
src/trace_processor/importers/saleae/: BUILD.gn  saleae_binary_trace_reader.cc  saleae_binary_trace_reader.h  saleae_binary_trace_reader_unittest.cc  saleae_csv_trace_reader.cc  saleae_csv_trace_reader.h  saleae_csv_trace_reader_unittest.cc
src/trace_processor/util/: trace_type.cc  trace_type.h
ui/: package.json
ui/src/assets/: bigtrace.html  index.html
ui/src/base/: zoned_interaction_handler.ts
ui/src/frontend/: help_modal.ts  home_page.ts  sidebar.ts  ui_main.ts
ui/src/frontend/timeline_page/: timeline_header.ts  timeline_interactions.ts  track_tree_view.ts
ui/src/open_perfetto_trace/: index.html  index.ts
ui/src/plugins/dev.perfetto.TraceProcessorTrack/: counter_tracks.ts  slice_tracks.ts
