# Copyright (C) 2025 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../gn/test.gni")

source_set("saleae") {
  sources = [
    "saleae_binary_trace_reader.cc",
    "saleae_binary_trace_reader.h",
    "saleae_csv_trace_reader.cc",
    "saleae_csv_trace_reader.h",
  ]
  deps = [
    "../../../../gn:default_deps",
    "../../importers/common",
    "../../storage",
    "../../tables:tables_python",
    "../../types:types",
    "../../util:trace_blob_view_reader",
  ]
}

perfetto_unittest_source_set("unittests") {
  testonly = true
  sources = [
    "saleae_binary_trace_reader_unittest.cc",
    "saleae_csv_trace_reader_unittest.cc",
  ]
  deps = [
    ":saleae",
    "../../../../gn:default_deps",
    "../../../../gn:gtest_and_gmock",
    "../../storage",
    "../../types:types",
    "../common",
  ]
}
